add structure and styles to the filters

--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
         </nav>
     </header>
 
+    <section id="container-filters">
+        <select id="item-select">
+            <option value="">Sortowanie domyślne</option>
+            <option value="alphabetically">Sortuj wg nazwy: A-Z</option>
+            <option value="low">Sortuj wg ceny: od najniższej</option>
+            <option value="hgh">Sortuj wg ceny: od najwyższej</option>
+        </select>
+        <select id="item-category">
+            <option value="all">Wszystkie kategorie</option>
+            <option value="finances">Finanse</option>
+            <option value="development">Rozwój osobisty</option>
+            <option value="it">IT</option>
+        </select>
+    </section>
+
     <section id="container-book">
         <div class="item-book">
             <img src="images/klub_5_rano.webp" alt='Okładka książki "Klub 5 rano"'>
