--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,8 @@
 
     <section id="container-cart">
         <h2>Twój koszyk</h2>
-        <table>
+        <p id="info-empty-cart">Twój koszyk aktualnie jest pusty.</p>
+        <table id="table">
             <thead>
                 <tr>
                     <th colspan="3">Produkt</th>
@@ -35,27 +36,7 @@
                     <th>Kwota</th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td><button class="btn-delete"><i class="fa-solid fa-xmark"></i></button></td>
-                    <td><img class="img-cart" src="images/klub_5_rano.webp" alt="okładka książki"></td>
-                    <td>Klub 5 rano</td>
-                    <td><span>31.20</span> zł</td>
-                    <td><input id="number" type="number" value="1" min="1"></td>
-                    <td><span>31.20</span> zł</td>
-                </tr>
-                <tr>
-                    <td><button class="btn-delete"><i class="fa-solid fa-xmark"></i></button></td>
-                    <td><img class="img-cart" src="images/atomowe_nawyki.webp" alt="okładka książki"></td>
-                    <td>Atomowe nawyki</td>
-                    <td><span>28.43</span> zł</td>
-                    <td><input id="number" type="number" value="1" min="1"></td>
-                    <td><span>28.43</span> zł</td>
-                </tr>
-                <tr>
-                    <td colspan="4" class="update"></td>
-                    <td colspan="5" class="update"><button>Zaktualizuj koszyk</button></td>
-                </tr>
+            <tbody id="container-products">
             </tbody>
         </table>
     </section>
@@ -78,8 +59,9 @@
                 </tr>
             </tbody>
         </table>
-        <button>Przejdź do kasy</button>
+        <button>Zapłać</button>
     </section>
 
+    <script src="js/cart.js"></script>
 </body>
 </html>
