update prices of products

--- a/cart.html
+++ b/cart.html
@@ -39,6 +39,9 @@
             <tbody id="container-products">
             </tbody>
         </table>
+        <div class="container-btn">
+            <button id="update-cart-btn">Zaktualizuj koszyk</button>
+        </div>
     </section>
 
     <section id="container-summary">
@@ -47,7 +50,7 @@
             <tbody>
                 <tr>
                     <th>Kwota</th>
-                    <td><span>59.63</span> zł</td>
+                    <td class="total"><span id="total"></span> zł</td>
                 </tr>
                 <tr>
                     <th>Wysyłka</th>
@@ -55,7 +58,7 @@
                 </tr>
                 <tr>
                     <th>Łącznie</th>
-                    <td><span>69.62</span> zł</td>
+                    <td class="total"><span id="totalAmountWithDelivery"></span> zł</td>
                 </tr>
             </tbody>
         </table>
