--- a/cart.html
+++ b/cart.html
@@ -62,7 +62,7 @@
                 </tr>
             </tbody>
         </table>
-        <button>Zapłać</button>
+        <a href="order.html"><button id="order-btn">Przejdź do płatności</button></a>
     </section>
 
     <script src="js/cart.js"></script>
