--- a/cart.html
+++ b/cart.html
@@ -66,7 +66,10 @@
                 </tr>
             </tbody>
         </table>
-        <a href="order.html"><button id="order-btn">Przejdź do płatności</button></a>
+        <div class="buttons">
+            <a href="home.html"><button id="back-btn">Wróć</button></a>
+            <a href="order.html"><button id="order-btn">Przejdź do płatności</button></a>
+        </div>
     </section>
 
     <script src="js/counter.js"></script>
