rename the file: home to index

--- a/cart.html
+++ b/cart.html
@@ -13,11 +13,11 @@
 <body>
     <header>
         <div class="logo">
-            <a href="home.html"><i class="fa-solid fa-book-open"></i> Sklep internetowy</a>
+            <a href="index.html"><i class="fa-solid fa-book-open"></i> Sklep internetowy</a>
         </div>
         <nav>
             <ul class="nav-desktop">
-                <li><a href="home.html">Strona główna</a></li>
+                <li><a href="index.html">Strona główna</a></li>
                 <li><a href="cart.html"><i class="fa-solid fa-basket-shopping"><span id="counter"></span></i> Koszyk</a>
                 </li>
             </ul>
@@ -67,7 +67,7 @@
             </tbody>
         </table>
         <div class="buttons">
-            <a href="home.html"><button id="back-btn">Wróć</button></a>
+            <a href="index.html"><button id="back-btn">Wróć</button></a>
             <a href="order.html"><button id="order-btn">Przejdź do płatności</button></a>
         </div>
     </section>
