--- a/order.html
+++ b/order.html
@@ -12,11 +12,11 @@
 <body>
     <header>
         <div class="logo">
-            <a href="home.html"><i class="fa-solid fa-book-open"></i> Sklep internetowy</a>
+            <a href="index.html"><i class="fa-solid fa-book-open"></i> Sklep internetowy</a>
         </div>
         <nav>
             <ul class="nav-desktop">
-                <li><a href="home.html">Strona główna</a></li>
+                <li><a href="index.html">Strona główna</a></li>
                 <li><a href="cart.html"><i class="fa-solid fa-basket-shopping"><span id="counter"></span></i> Koszyk</a>
                 </li>
             </ul>
