fix tag h1 - one on the page and add styles

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header>
         <div class="logo">
             <a href="index.html"><i class="fa-solid fa-book-open"></i> Sklep internetowy</a>
+            <h1>Internetowa księgarnia</h1>
         </div>
         <nav>
             <ul class="nav-desktop">
